--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
+    "build:css": "node-sass src/sass/index.scss www/css/index.css -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/SpaceDogSergei/MCR/issues"
   },
-  "homepage": "https://github.com/SpaceDogSergei/MCR#readme"
+  "homepage": "https://github.com/SpaceDogSergei/MCR#readme",
+  "devDependencies": {
+    "node-sass": "^4.14.1"
+  },
+  "dependencies": {
+  }
 }
