--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "build:css": "node-sass src/sass/index.scss www/css/index.css -w",
+    "build:js": "webpack -w --mode development --devtool inline-source-map",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
